--- a/32_view_draw_process/src/main/res/layout/activity_main.xml
+++ b/32_view_draw_process/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/childText"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Hello World!"
         android:textColor="@color/colorPrimaryDark"
