--- a/10_drawing/src/main/res/layout/activity_main.xml
+++ b/10_drawing/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,13 +38,8 @@
          android:layout_width="match_parent"
          android:layout_height="match_parent" />-->
 
-    <com.hsicen.drawing.test.DashView
+    <com.hsicen.drawing.test.PieView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:mark="30"
-        app:markLength="128dp"
-        app:markPos="15"
-        app:openAngle="100"
-        app:radius="140dp" />
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
