利用Xfermode绘制圆形图片

--- a/10_drawing/src/main/res/layout/activity_main.xml
+++ b/10_drawing/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
          android:layout_width="match_parent"
          android:layout_height="match_parent" />-->
 
-    <com.hsicen.drawing.test.PieView
+    <com.hsicen.drawing.test.UserView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
