--- a/10_drawing/src/main/res/layout/activity_main.xml
+++ b/10_drawing/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,7 +37,11 @@
          android:layout_width="match_parent"
          android:layout_height="match_parent" />-->
 
-    <com.hsicen.drawing.test.UserView
+    <!-- <com.hsicen.drawing.test.UserView
+         android:layout_width="match_parent"
+         android:layout_height="match_parent" />-->
+
+    <com.hsicen.drawing.view.CameraView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
