--- a/11_animator/src/main/res/layout/activity_main.xml
+++ b/11_animator/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="60dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,6 +26,20 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.hsicen.animator.test.ColorView
+            android:id="@+id/colorView"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginTop="32dp" />
+
+        <Button
+            android:id="@+id/colorStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="开始"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.hsicen.animator.PointView
             android:id="@+id/pointView"
             android:layout_width="match_parent"
@@ -34,6 +48,20 @@
 
         <Button
             android:id="@+id/pointStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="开始"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.hsicen.animator.test.SportView
+            android:id="@+id/sportView"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginTop="32dp" />
+
+        <Button
+            android:id="@+id/sportStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="开始"
@@ -56,15 +84,19 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <com.hsicen.animator.MaterialEditText
+        <com.hsicen.animator.test.MaterialEditTextNew
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:hint="姓名"
+            android:hint="请输入你的名字"
+            app:label="请输入你的名字"
+            app:labelColor="@color/colorPrimary"
+            app:labelSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:rengwuxian="true"
-            app:useFloatingLabel="true" />
+            app:useFloatingLabel="true"
+            app:useLabel="true" />
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
