--- a/Jetpack/viewmodel/src/main/res/layout/activity_second.xml
+++ b/Jetpack/viewmodel/src/main/res/layout/activity_second.xml
@@ -4,27 +4,23 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".MainActivity">
+  tools:context=".SecondActivity">
+
+  <Button
+    android:id="@+id/btnFinish"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Finish"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
   <TextView
     android:id="@+id/content"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="@color/purple_200"
-    android:textSize="14sp"
+    android:text="TextView"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-  <Button
-    android:id="@+id/btnViewModel"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="16dp"
-    android:text="jump"
-    android:textAllCaps="false"
-    android:textSize="12sp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
