--- a/compose/01_hellocompose/src/main/res/values/themes.xml
+++ b/compose/01_hellocompose/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
   <!-- Base application theme. -->
   <style name="Theme.HencoderPlus" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
     <!-- Primary brand color. -->
@@ -10,7 +10,7 @@
     <item name="colorSecondaryVariant">@color/teal_700</item>
     <item name="colorOnSecondary">@color/black</item>
     <!-- Status bar color. -->
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    <item name="android:statusBarColor">@color/white</item>
     <!-- Customize your theme here. -->
   </style>
 
@@ -19,7 +19,7 @@
     <item name="windowNoTitle">true</item>
   </style>
 
-  <style name="Theme.HencoderPlus.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+  <style name="Theme.HencoderPlus.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-  <style name="Theme.HencoderPlus.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+  <style name="Theme.HencoderPlus.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 </resources>
