--- a/compose/04_animation/src/main/res/values-night/themes.xml
+++ b/compose/04_animation/src/main/res/values-night/themes.xml
@@ -13,6 +13,8 @@
     <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
 
+    <item name="windowNoTitle">true</item>
+    <item name="android:windowFullscreen">true</item>
     <item name="android:navigationBarColor">@android:color/transparent</item>
   </style>
 </resources>
