--- a/compose/todo/src/main/res/values/colors.xml
+++ b/compose/todo/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+
+  <!-- Status bar -->
+  <color name="black30">#4D000000</color>
+
+  <!-- Light -->
+  <color name="blue500">#0540F2</color>
+  <color name="blue800">#001CCF</color>
+  <color name="yellow700">#F3B711</color>
+  <!-- Dark -->
+  <color name="blue300">#6F7EF9</color>
+  <color name="blue400">#4860F7</color>
+  <color name="yellow400">#F6E547</color>
 </resources>
