--- a/compose/todo/src/main/res/values/themes.xml
+++ b/compose/todo/src/main/res/values/themes.xml
@@ -1,25 +1,18 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-  <!-- Base application theme. -->
-  <style name="Theme.HencoderPlus" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-    <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/purple_500</item>
-    <item name="colorPrimaryVariant">@color/purple_700</item>
-    <item name="colorOnPrimary">@color/white</item>
-    <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/teal_200</item>
-    <item name="colorSecondaryVariant">@color/teal_700</item>
-    <item name="colorOnSecondary">@color/black</item>
-    <!-- Status bar color. -->
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-    <!-- Customize your theme here. -->
+<resources>
+
+  <style name="Platform.Theme.Todo" parent="Theme.MaterialComponents.DayNight">
+    <item name="android:statusBarColor">@color/black30</item>
   </style>
 
-  <style name="Theme.HencoderPlus.NoActionBar">
+  <style name="Theme.Todo" parent="Platform.Theme.Todo">
+    <item name="colorPrimary">@color/blue500</item>
+    <item name="colorPrimaryDark">@color/blue800</item>
+    <item name="colorAccent">@color/yellow700</item>
+  </style>
+
+  <style name="Theme.Todo.NoActionBar">
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
   </style>
 
-  <style name="Theme.HencoderPlus.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-  <style name="Theme.HencoderPlus.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
