--- a/compose/todo/src/main/res/values/colors.xml
+++ b/compose/todo/src/main/res/values/colors.xml
@@ -15,8 +15,13 @@
   <color name="blue500">#0540F2</color>
   <color name="blue800">#001CCF</color>
   <color name="yellow700">#F3B711</color>
+
   <!-- Dark -->
   <color name="blue300">#6F7EF9</color>
   <color name="blue400">#4860F7</color>
   <color name="yellow400">#F6E547</color>
+
+  <!-- Logo -->
+  <color name="yellow_logo">@color/yellow700</color>
+  <color name="blue_logo">@color/blue500</color>
 </resources>
